<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="by.orion.onlinertasks.presentation.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_login_logo"
            tools:ignore="ContentDescription" />

        <!-- Username or email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:hintTextAppearance="@style/TextLoginLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputedittext_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_input_field"
                android:hint="@string/msg_login_username_or_email"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:padding="14dp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextLoginLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputedittext_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="14dp"
                android:hint="@string/msg_login_password"
                android:gravity="center_vertical"
                android:background="@drawable/bg_rounded_input_field" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/msg_login_sign_in"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/login_sign_in_text_color"
            android:background="@drawable/bg_login_button_sign_in"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
